<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.github.ridiekel</groupId>
    <artifactId>jeletask</artifactId>
    <packaging>pom</packaging>
    <version>3.3.0</version>

    <name>Teletask API - Parent</name>
    <description>An API written in java for accessing Teletask central units.</description>
    <url>https://github.com/ridiekel/jeletask</url>

    <modules>
        <module>client</module>
        <module>jeletask2mqtt</module>
        <module>jeletask2mqtt-normal</module>
        <module>jeletask2mqtt-native</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <junit.version>4.11</junit.version>
        <jackson.version>2.9.7</jackson.version>
        <log4j-api.version>2.17.0</log4j-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>jeletask-client</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>jeletask2mqtt</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.8.0-M1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>4.0.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <scm>
        <connection>scm:git:git@github.com:ridiekel/jeletask.git</connection>
        <developerConnection>scm:git:git@github.com:ridiekel/jeletask.git</developerConnection>
        <url>https://github.com/ridiekel/jeletask/tree/master</url>
    </scm>

    <developers>
        <developer>
            <name>Geroen Dierckx</name>
            <email>geroen@b-lauw.be</email>
            <organizationUrl>https://github.com/ridiekel/jeletask</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.en.html</url>
        </license>
    </licenses>
</project>
